--- a/CocktailApp/Api/Module/ListCell/ListCell.xib
+++ b/CocktailApp/Api/Module/ListCell/ListCell.xib
@@ -1,21 +1,53 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ListCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ListCell" customModule="CocktailApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="246" height="295"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="246" height="295"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YmZ-Yz-7li">
+                        <rect key="frame" x="0.0" y="0.0" width="246" height="257"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="YmZ-Yz-7li" secondAttribute="height" multiplier="246:257" id="Td9-Qq-Ggs"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wCh-pn-eTv">
+                        <rect key="frame" x="8" y="257" width="230" height="38"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="YmZ-Yz-7li" secondAttribute="trailing" id="6KH-re-Sm9"/>
+                <constraint firstItem="wCh-pn-eTv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="FF5-8h-Yvq"/>
+                <constraint firstAttribute="bottom" secondItem="wCh-pn-eTv" secondAttribute="bottom" id="OX1-Iz-5JV"/>
+                <constraint firstItem="wCh-pn-eTv" firstAttribute="top" secondItem="YmZ-Yz-7li" secondAttribute="bottom" id="PUH-wJ-7VM"/>
+                <constraint firstItem="wCh-pn-eTv" firstAttribute="top" secondItem="YmZ-Yz-7li" secondAttribute="bottom" id="bRq-RU-f99"/>
+                <constraint firstAttribute="trailing" secondItem="wCh-pn-eTv" secondAttribute="trailing" constant="8" id="k48-8v-Wd9"/>
+                <constraint firstItem="YmZ-Yz-7li" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lbD-5y-caF"/>
+                <constraint firstItem="YmZ-Yz-7li" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="vlS-eF-XdV"/>
+            </constraints>
+            <size key="customSize" width="252" height="306"/>
+            <connections>
+                <outlet property="imageView" destination="YmZ-Yz-7li" id="rTO-tF-R7C"/>
+                <outlet property="label" destination="wCh-pn-eTv" id="Cbb-u7-wCV"/>
+            </connections>
+            <point key="canvasLocation" x="277.86259541984731" y="110.21126760563381"/>
         </collectionViewCell>
     </objects>
 </document>
