--- a/CocktailApp/Api/Module/ListCell/ListCell.xib
+++ b/CocktailApp/Api/Module/ListCell/ListCell.xib
@@ -11,20 +11,25 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ListCell" customModule="CocktailApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="246" height="295"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="220"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="246" height="295"/>
+                <rect key="frame" x="0.0" y="0.0" width="200" height="220"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YmZ-Yz-7li">
-                        <rect key="frame" x="0.0" y="0.0" width="246" height="257"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YmZ-Yz-7li">
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="190"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="YmZ-Yz-7li" secondAttribute="height" multiplier="246:257" id="Td9-Qq-Ggs"/>
+                            <constraint firstAttribute="width" constant="200" id="feT-2o-t9H"/>
+                            <constraint firstAttribute="height" constant="190" id="fjH-XQ-dqE"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wCh-pn-eTv">
-                        <rect key="frame" x="8" y="257" width="230" height="38"/>
+                        <rect key="frame" x="8" y="190" width="184" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="AqE-52-lkD"/>
+                            <constraint firstAttribute="width" constant="184" id="wkt-pg-ZLg"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -33,21 +38,21 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="YmZ-Yz-7li" secondAttribute="trailing" id="6KH-re-Sm9"/>
-                <constraint firstItem="wCh-pn-eTv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="FF5-8h-Yvq"/>
-                <constraint firstAttribute="bottom" secondItem="wCh-pn-eTv" secondAttribute="bottom" id="OX1-Iz-5JV"/>
-                <constraint firstItem="wCh-pn-eTv" firstAttribute="top" secondItem="YmZ-Yz-7li" secondAttribute="bottom" id="PUH-wJ-7VM"/>
-                <constraint firstItem="wCh-pn-eTv" firstAttribute="top" secondItem="YmZ-Yz-7li" secondAttribute="bottom" id="bRq-RU-f99"/>
-                <constraint firstAttribute="trailing" secondItem="wCh-pn-eTv" secondAttribute="trailing" constant="8" id="k48-8v-Wd9"/>
-                <constraint firstItem="YmZ-Yz-7li" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lbD-5y-caF"/>
-                <constraint firstItem="YmZ-Yz-7li" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="vlS-eF-XdV"/>
+                <constraint firstItem="YmZ-Yz-7li" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="8QU-Gr-s7E"/>
+                <constraint firstItem="wCh-pn-eTv" firstAttribute="top" secondItem="YmZ-Yz-7li" secondAttribute="bottom" id="B6g-zf-OyM"/>
+                <constraint firstItem="wCh-pn-eTv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="Hcf-MQ-Tg5"/>
+                <constraint firstAttribute="trailing" secondItem="wCh-pn-eTv" secondAttribute="trailing" constant="8" id="RAE-Oq-SjR"/>
+                <constraint firstAttribute="bottom" secondItem="wCh-pn-eTv" secondAttribute="bottom" id="WbU-ih-nCA"/>
+                <constraint firstAttribute="trailing" secondItem="YmZ-Yz-7li" secondAttribute="trailing" id="c8P-Tw-Flm"/>
+                <constraint firstItem="YmZ-Yz-7li" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="sNo-G9-Q6J"/>
+                <constraint firstItem="wCh-pn-eTv" firstAttribute="top" secondItem="YmZ-Yz-7li" secondAttribute="bottom" id="uNw-Tb-qEW"/>
             </constraints>
             <size key="customSize" width="252" height="306"/>
             <connections>
                 <outlet property="imageView" destination="YmZ-Yz-7li" id="rTO-tF-R7C"/>
                 <outlet property="label" destination="wCh-pn-eTv" id="Cbb-u7-wCV"/>
             </connections>
-            <point key="canvasLocation" x="277.86259541984731" y="110.21126760563381"/>
+            <point key="canvasLocation" x="277.86259541984731" y="109.85915492957747"/>
         </collectionViewCell>
     </objects>
 </document>
