--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -111,10 +111,32 @@
                     <view key="view" contentMode="scaleToFill" id="pM4-Ag-bbp">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="r54-58-DFe">
+                                <rect key="frame" x="0.0" y="59" width="393" height="710"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="twA-bT-Ca9">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="bH6-mV-SpR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bH6-mV-SpR" firstAttribute="bottom" secondItem="r54-58-DFe" secondAttribute="bottom" id="NFo-9k-wzi"/>
+                            <constraint firstItem="bH6-mV-SpR" firstAttribute="trailing" secondItem="r54-58-DFe" secondAttribute="trailing" id="RXK-A5-0YN"/>
+                            <constraint firstItem="r54-58-DFe" firstAttribute="top" secondItem="bH6-mV-SpR" secondAttribute="top" id="VLN-Md-dK2"/>
+                            <constraint firstItem="r54-58-DFe" firstAttribute="leading" secondItem="bH6-mV-SpR" secondAttribute="leading" id="exV-SO-QGi"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="oXt-1v-ewB"/>
+                    <connections>
+                        <outlet property="collectionView" destination="r54-58-DFe" id="ufP-6A-Zls"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JnS-Ri-Gro" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
