--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="NSM-TK-bSN" kind="relationship" relationship="viewControllers" id="wTR-a3-00F"/>
-                        <segue destination="Xfv-ZP-mfD" kind="relationship" relationship="viewControllers" id="WL0-v2-Ivd"/>
+                        <segue destination="dIm-2U-YUh" kind="relationship" relationship="viewControllers" id="WL0-v2-Ivd"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JjJ-W8-rnJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -104,7 +104,7 @@
             </objects>
             <point key="canvasLocation" x="1664.885496183206" y="-815.49295774647896"/>
         </scene>
-        <!--Item-->
+        <!--Search View Controller-->
         <scene sceneID="tCw-wf-Ekm">
             <objects>
                 <viewController id="Xfv-ZP-mfD" customClass="SearchViewController" customModule="CocktailApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -112,8 +112,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="r54-58-DFe">
-                                <rect key="frame" x="8" y="107" width="377" height="745"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="r54-58-DFe">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="twA-bT-Ca9">
                                     <size key="itemSize" width="128" height="128"/>
@@ -127,19 +127,20 @@
                         <viewLayoutGuide key="safeArea" id="bH6-mV-SpR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="r54-58-DFe" firstAttribute="leading" secondItem="bH6-mV-SpR" secondAttribute="leading" constant="8" id="Jab-72-hAW"/>
-                            <constraint firstItem="bH6-mV-SpR" firstAttribute="trailing" secondItem="r54-58-DFe" secondAttribute="trailing" constant="8" id="N3x-5l-m3i"/>
-                            <constraint firstAttribute="bottom" secondItem="r54-58-DFe" secondAttribute="bottom" id="e6y-aV-2JS"/>
+                            <constraint firstItem="r54-58-DFe" firstAttribute="leading" secondItem="bH6-mV-SpR" secondAttribute="leading" id="2Yd-OX-zz5"/>
+                            <constraint firstItem="r54-58-DFe" firstAttribute="top" secondItem="bH6-mV-SpR" secondAttribute="top" id="UPD-Va-i3v"/>
+                            <constraint firstItem="bH6-mV-SpR" firstAttribute="trailing" secondItem="r54-58-DFe" secondAttribute="trailing" id="bC5-c4-klt"/>
+                            <constraint firstItem="bH6-mV-SpR" firstAttribute="bottom" secondItem="r54-58-DFe" secondAttribute="bottom" id="ku6-jj-DTd"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="oXt-1v-ewB"/>
+                    <navigationItem key="navigationItem" id="GCS-8o-WEr"/>
                     <connections>
                         <outlet property="collectionView" destination="r54-58-DFe" id="ufP-6A-Zls"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JnS-Ri-Gro" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="174.80916030534351" y="-139.43661971830986"/>
+            <point key="canvasLocation" x="1101.5267175572519" y="-139.43661971830986"/>
         </scene>
         <!--Item-->
         <scene sceneID="xy5-le-dbE">
@@ -159,6 +160,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zRE-qA-Vb9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="151.90839694656489" y="-815.49295774647896"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="C0M-76-Ria">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dIm-2U-YUh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="oXt-1v-ewB"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yY6-20-bBc">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Xfv-ZP-mfD" kind="relationship" relationship="rootViewController" id="gjH-Zf-2IJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S2T-2b-0Rw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="174.80916030534351" y="-139.43661971830986"/>
         </scene>
     </scenes>
     <resources>
