--- a/CocktailApp/Api/Module/CategoryCell/CategoryCell.xib
+++ b/CocktailApp/Api/Module/CategoryCell/CategoryCell.xib
@@ -18,13 +18,16 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cocktail" translatesAutoresizingMaskIntoConstraints="NO" id="dyi-ww-FeT">
-                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                        <rect key="frame" x="4" y="4" width="142" height="142"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="dyi-ww-FeT" secondAttribute="height" multiplier="1:1" id="aJn-CL-1fr"/>
+                            <constraint firstAttribute="width" secondItem="dyi-ww-FeT" secondAttribute="height" multiplier="1:1" id="9N8-T2-lAh"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xal-PS-FWJ">
-                        <rect key="frame" x="8" y="150" width="134" height="30"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Xal-PS-FWJ">
+                        <rect key="frame" x="4" y="150" width="142" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="NCQ-lB-wR6"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -33,14 +36,13 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="dyi-ww-FeT" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="DX8-az-HV0"/>
-                <constraint firstAttribute="trailing" secondItem="dyi-ww-FeT" secondAttribute="trailing" id="ETL-yP-THK"/>
-                <constraint firstAttribute="trailing" secondItem="Xal-PS-FWJ" secondAttribute="trailing" constant="8" id="Fst-Wq-RgI"/>
-                <constraint firstItem="Xal-PS-FWJ" firstAttribute="top" secondItem="dyi-ww-FeT" secondAttribute="bottom" id="G5P-8o-QwJ"/>
-                <constraint firstItem="Xal-PS-FWJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="GGa-JA-gVn"/>
-                <constraint firstItem="Xal-PS-FWJ" firstAttribute="top" secondItem="dyi-ww-FeT" secondAttribute="bottom" id="Lc8-Kg-VAc"/>
-                <constraint firstItem="dyi-ww-FeT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="fN5-j2-Nqq"/>
-                <constraint firstAttribute="bottom" secondItem="Xal-PS-FWJ" secondAttribute="bottom" id="rZn-ew-ysv"/>
+                <constraint firstAttribute="trailing" secondItem="dyi-ww-FeT" secondAttribute="trailing" constant="4" id="1yi-91-Rce"/>
+                <constraint firstAttribute="trailing" secondItem="Xal-PS-FWJ" secondAttribute="trailing" constant="4" id="LBp-na-vFZ"/>
+                <constraint firstItem="Xal-PS-FWJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="R0l-L4-pNO"/>
+                <constraint firstItem="dyi-ww-FeT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="WGH-wZ-DoN"/>
+                <constraint firstItem="Xal-PS-FWJ" firstAttribute="top" secondItem="dyi-ww-FeT" secondAttribute="bottom" constant="4" id="dT6-Fk-KBn"/>
+                <constraint firstAttribute="bottom" secondItem="Xal-PS-FWJ" secondAttribute="bottom" id="jbt-4u-smv"/>
+                <constraint firstItem="dyi-ww-FeT" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="mPd-Sh-CWc"/>
             </constraints>
             <size key="customSize" width="150" height="180"/>
             <connections>
