--- a/CocktailApp/Api/Module/SearchListCell/SmallCardCell.xib
+++ b/CocktailApp/Api/Module/SearchListCell/SmallCardCell.xib
@@ -1,21 +1,53 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SmallCardCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SmallCardCell" id="WKk-D8-n91" customClass="SmallCardCell" customModule="CocktailApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="157" height="225"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="157" height="225"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g1h-UJ-y97">
+                        <rect key="frame" x="4" y="4" width="149" height="180.33333333333334"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="g1h-UJ-y97" secondAttribute="height" multiplier="157:190" id="ZVW-kc-LKk"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N1c-oV-F8m">
+                        <rect key="frame" x="4" y="188.33333333333334" width="149" height="36.666666666666657"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <viewLayoutGuide key="safeArea" id="9uU-d9-KwM"/>
+            <constraints>
+                <constraint firstItem="N1c-oV-F8m" firstAttribute="top" secondItem="g1h-UJ-y97" secondAttribute="bottom" constant="4" id="3Eg-wZ-0eg"/>
+                <constraint firstAttribute="trailing" secondItem="N1c-oV-F8m" secondAttribute="trailing" constant="4" id="4O0-TL-qxq"/>
+                <constraint firstItem="g1h-UJ-y97" firstAttribute="leading" secondItem="WKk-D8-n91" secondAttribute="leading" constant="4" id="7bp-oL-G5d"/>
+                <constraint firstItem="N1c-oV-F8m" firstAttribute="top" secondItem="g1h-UJ-y97" secondAttribute="bottom" constant="4" id="EOU-CX-mXx"/>
+                <constraint firstItem="g1h-UJ-y97" firstAttribute="top" secondItem="WKk-D8-n91" secondAttribute="top" constant="4" id="Iz9-ff-5xs"/>
+                <constraint firstAttribute="bottom" secondItem="N1c-oV-F8m" secondAttribute="bottom" id="Qcl-xX-G3I"/>
+                <constraint firstItem="N1c-oV-F8m" firstAttribute="leading" secondItem="WKk-D8-n91" secondAttribute="leading" constant="4" id="bMU-1a-8ZZ"/>
+                <constraint firstAttribute="trailing" secondItem="g1h-UJ-y97" secondAttribute="trailing" constant="4" id="mgq-xF-Jif"/>
+            </constraints>
+            <size key="customSize" width="157" height="225"/>
+            <connections>
+                <outlet property="imageView" destination="g1h-UJ-y97" id="h7Y-ik-u3K"/>
+                <outlet property="label" destination="N1c-oV-F8m" id="LSU-g3-Gjw"/>
+            </connections>
+            <point key="canvasLocation" x="159.54198473282443" y="-48.239436619718312"/>
         </collectionViewCell>
     </objects>
 </document>
